Squashed commit of the following:
    - Mermaid rendering support
    - Minor version bump
    - Build system upgrade.